<b>Version 2.6.0:</b><br/><br/>
    &#8226; New compose window<br/>
    &#8226; Post tweets with animated GIFs (Twitter doesn't support viewing yet)<br/>
    &#8226; Upload multiple images to twitters native hosting<br/>
    &#8226; Better clearing of notification data<br/>
    &#8226; Small changes for sending normal pictures<br/>
<br/><br/>

<b>Version 2.5.4:</b><br/><br/>
    &#8226; Profile pictures getting mixed up<br/>
    &#8226; Better client muting<br/>
    &#8226; Updated local trend locations<br/>
    &#8226; Other bug fixes<br/>
<br/><br/>

<b>Version 2.5.3:</b><br/><br/>
    &#8226; Android Wear fixes<br/>
    &#8226; Crash fix<br/>
<br/><br/>

<b>Version 2.5.2:</b><br/><br/>
    &#8226; Full release<br/>
    &#8226; Fixed some pictures getting stretched<br/>
<br/><br/>

<b>Version 2.5.1:</b><br/><br/>
    &#8226; Few fixes<br/>
    &#8226; Updated translations<br/>
<br/><br/>

<b>Version 2.5.0:</b><br/><br/>
    &#8226; Auto-complete hashtags<br/>
    &#8226; Mute by client (long press the timestamp)<br/>
    &#8226; View pictures from twitters native client in direct messages<br/>
    &#8226; Share your pictures from the photo viewer dialog to any apps<br/>
    &#8226; Background sync of your second account's DM's<br/>
    &#8226; High quality profile pictures<br/>
    &#8226; Some rotation fixes<br/>
    &#8226; Character counter on the scheduled tweets<br/>
    &#8226; Better backup of settings<br/>
<br/><br/>

<b>Version 2.4.7:</b><br/><br/>
    &#8226; Fix for refresh on startup<br/>
    &#8226; Better restoring of settings backups<br/>
    &#8226; Changes to attaching images on KitKat<br/>
    &#8826; Various stability and small performance improvements<br/>
<br/><br/>

<b>Version 2.4.6.1:</b><br/><br/>
    &#8226; Force close on drafts<br/>
<br/><br/>

<b>Version 2.4.6:</b><br/><br/>
    &#8226; Fix re-searching<br/>
    &#8226; Added a delete all button to the drafts list<br/>
    &#8226; Changes to refresh on startup<br/>