@@ -18,7 +18,7 @@
         android:key="klinkerapps"
         android:title="@string/our_website" >
         <intent android:action="android.intent.action.VIEW"
-            android:data="https://klinkerapps.com" />
+            android:data="http://klinkerapps.com" />
         </Preference>
 
     <Preference
