@@ -1,7 +1,9 @@
 <b>Version 2.6.0:</b><br/><br/>
     &#8226; New compose window<br/>
+    &#8226; View the tweet you are replying to in the compose window<br/>
     &#8226; Post tweets with animated GIFs (Twitter doesn't support viewing yet)<br/>
     &#8226; Upload multiple images to twitters native hosting<br/>
+    &#8226; Better notifications for mentions, direct messages, and favorite users<br/>
     &#8226; Better clearing of notification data<br/>
     &#8226; Small changes for sending normal pictures<br/>
 <br/><br/>
